--- a/wagtailvideos/templates/wagtailvideos/chooser/chooser.html
+++ b/wagtailvideos/templates/wagtailvideos/chooser/chooser.html
@@ -46,7 +46,8 @@
                         {% endif %}
                     {% endfor %}
                     <li>
-                        <button type="submit" class="button button-longrunning" data-clicked-text="{% trans 'Uploading...' %}"><span class="icon icon-spinner"></span><em>{% trans 'Upload' %}</em></button>
+                        <button type="submit" class="button button-longrunning" data-reenableafter="300"
+                                data-clicked-text="{% trans 'Uploading...' %}"><span class="icon icon-spinner"></span><em>{% trans 'Upload' %}</em></button>
                     </li>
                 </ul>
             </form>
